# fastcs-xspress

./: .copier-answers.yml  Dockerfile  README.md  catalog-info.yaml  pyproject.toml  switcher.json
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: _pypi.yml  ci.yml
0.1.0beta1/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.1.0beta1/.doctrees/: tutorials.doctree
0.1.0beta1/_api/: fastcs_xspress.html
0.1.0beta1/explanations/: decisions.html
0.1.0beta1/how-to/: contribute.html  run-container.html
0.1.0beta1/tutorials/: installation.html
0.1.0beta2/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.1.0beta2/_api/: fastcs_xspress.html
0.1.0beta2/_sources/: _api.rst.txt
0.1.0beta2/explanations/: decisions.html
0.1.0beta2/how-to/: contribute.html  run-container.html
0.1.0beta2/tutorials/: installation.html
0.1.0beta3/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.1.0beta3/_api/: fastcs_xspress.html
0.1.0beta3/explanations/: decisions.html
0.1.0beta3/how-to/: contribute.html  run-container.html
0.1.0beta3/tutorials/: installation.html
0.1.0beta4/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.1.0beta4/_api/: fastcs_xspress.html
0.1.0beta4/explanations/: decisions.html
0.1.0beta4/how-to/: contribute.html  run-container.html
0.1.0beta4/tutorials/: installation.html
0.1.0beta5/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.1.0beta5/_api/: fastcs_xspress.html
0.1.0beta5/explanations/: decisions.html
0.1.0beta5/how-to/: contribute.html  run-container.html
0.1.0beta5/tutorials/: installation.html
0.1.0beta6/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.1.0beta6/.doctrees/: how-to.doctree
0.1.0beta6/_api/: fastcs_xspress.html
0.1.0beta6/explanations/: decisions.html
0.1.0beta6/how-to/: contribute.html  run-container.html
0.1.0beta6/tutorials/: installation.html
0.1.0beta7/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.1.0beta7/.doctrees/: reference.doctree
0.1.0beta7/_api/: fastcs_xspress.html
0.1.0beta7/explanations/: decisions.html
0.1.0beta7/how-to/: contribute.html  run-container.html
0.1.0beta7/tutorials/: installation.html
0.1.0beta8/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
0.1.0beta8/.doctrees/: index.doctree
0.1.0beta8/_api/: fastcs_xspress.html
0.1.0beta8/explanations/: decisions.html
0.1.0beta8/how-to/: contribute.html  run-container.html
0.1.0beta9/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
1.0/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
docs/: conf.py
main/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
tests/: test_cli.py  test_xspress_controller.py
(+60 files in other folders)
